# backtest-service

./: Cargo.toml  README.md
src/: main.rs
src/data/15M/: intraday_15min_IBM 2021-03.csv  intraday_15min_IBM 2021-04.csv  intraday_15min_IBM 2021-05.csv  intraday_15min_IBM 2021-06.csv  intraday_15min_IBM 2021-07.csv  intraday_15min_IBM 2021-08.csv  intraday_15min_IBM 2021-09.csv  intraday_15min_IBM 2021-10.csv  intraday_15min_IBM 2021-11.csv  intraday_15min_IBM 2021-12.csv  intraday_15min_IBM 2022-01.csv  intraday_15min_IBM 2022-02.csv  intraday_15min_IBM 2022-03.csv  intraday_15min_IBM 2022-04.csv  intraday_15min_IBM 2022-05.csv  intraday_15min_IBM 2022-06.csv  intraday_15min_IBM 2022-07.csv  intraday_15min_IBM 2022-08.csv  intraday_15min_IBM 2022-09.csv  intraday_15min_IBM 2022-10.csv  intraday_15min_IBM 2022-11.csv  intraday_15min_IBM 2022-12.csv  intraday_15min_IBM 2023-01.csv  intraday_15min_IBM 2023-02.csv  intraday_15min_IBM 2023-03.csv  intraday_15min_IBM 2023-04.csv  intraday_15min_IBM 2023-05.csv  intraday_15min_IBM 2023-06.csv  intraday_15min_IBM 2023-07.csv  intraday_15min_IBM 2023-08.csv  intraday_15min_IBM 2023-09.csv  intraday_15min_IBM 2023-10.csv  intraday_15min_IBM 2023-11.csv  intraday_15min_IBM 2023-12.csv  intraday_15min_IBM 2024-01.csv  intraday_15min_IBM 2024-02.csv  intraday_15min_IBM 2024-03.csv  intraday_15min_IBM 2024-04.csv  (+12 more)
src/database/: JdbcUtil.rs  database.rs  mod.rs
src/indicators/: mod.rs
src/model/: mod.rs  trading_data.rs
src/order/: order.rs
src/portfolio/: mod.rs  portfolio.rs
src/socket/: connect.rs
(+11 files in other folders)
