[package]
name = "BackTest"
version = "0.1.0"
edition = "2024"

[dependencies]

polars = {version = "0.23.2", features = ["lazy", "csv-file"]}
datafusion = "47.0.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3.31"
url = "2"
tungstenite = "0.26.2"
urlencoding = "2.1.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql","sqlx-mysql", "runtime-tokio-rustls"]}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
